# isamples_sesar

./: .gitignore  Dockerfile  README.md  conftest.py  main.py  mypy.ini  pyproject.toml  requirements.txt  sesardb-schemaonly.dump
.github/workflows/: python-app.yml
examples/: EOI00002H.json  IEDUT103B.json  IEEJR000M.json  IEJEN0040.json  IERVTL1I7.json  ODP02Q1IZ.json
isamples_sesar/: SesarTransformer.py  classification.py  country.py  launch_type.py  mapper.py  nav_type.py  sample.py  sample_additional_name.py  sample_type.py  sesar_adapter.py  sesar_sqlmodel.py  sesar_transformer.py  sesar_user.py  sqlmodel_database.py
scripts/: sesar_things.py
tests/: conftest.py  test_isamples_metadata.py  test_sesar_things.py  test_sqlmodel_database.py
