[tool.poetry]
name = "iSamples SESAR"
version = "0.1.0"
description = "Deep integration between the SESAR Postgresql database and the iSamples Data Model"
authors = ["Danny Mandel <danny.mandel@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"
packages = [
    { include = "isamples_sesar"},
]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
sqlmodel = "^0.0.12"
psycopg2 = "^2.9.7"
isamples-inabox = {git = "https://github.com/isamplesorg/isamples_inabox.git", rev = "develop"}

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
mypy = "^1.5.1"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
